[gd_scene load_steps=20 format=3 uid="uid://cbmcnj7uapsfv"]

[ext_resource type="Script" path="res://Scripts/MainMenuScriptGDVer.gd" id="1_p5i5w"]
[ext_resource type="PackedScene" uid="uid://ctc6o4emkemtu" path="res://settings_hud.tscn" id="2_n032f"]
[ext_resource type="Texture2D" uid="uid://c3dj27yg0yxeo" path="res://Textures/TempTitle.png" id="6_ao1ut"]
[ext_resource type="Script" path="res://Scripts/StartButtonScript.cs" id="7_3y5k0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_xynrc"]
size = Vector3(13, 1, 13)

[sub_resource type="BoxMesh" id="BoxMesh_kj2yp"]
size = Vector3(13, 1, 13)

[sub_resource type="BoxShape3D" id="BoxShape3D_o84a2"]
size = Vector3(15, 18, 1)

[sub_resource type="BoxMesh" id="BoxMesh_drpom"]
size = Vector3(15, 18, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_s6yrh"]
size = Vector3(1, 18, 15)

[sub_resource type="BoxMesh" id="BoxMesh_4mql8"]
size = Vector3(1, 18, 15)

[sub_resource type="BoxShape3D" id="BoxShape3D_hy7rq"]
size = Vector3(7, 1.3, 0.06)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ebrjy"]
backlight = Color(0.682353, 0.858824, 0, 1)

[sub_resource type="TextMesh" id="TextMesh_io22k"]
material = SubResource("StandardMaterial3D_ebrjy")
text = "Begin
"

[sub_resource type="BoxShape3D" id="BoxShape3D_q6dtr"]
size = Vector3(7, 1.3, 0.06)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mkv2e"]

[sub_resource type="TextMesh" id="TextMesh_v5vv3"]
material = SubResource("StandardMaterial3D_mkv2e")
text = "Settings"

[sub_resource type="BoxShape3D" id="BoxShape3D_xjsee"]
size = Vector3(7, 1.3, 0.06)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a71e6"]

[sub_resource type="TextMesh" id="TextMesh_tsd0r"]
material = SubResource("StandardMaterial3D_a71e6")
text = "Quit to Desktop"

[node name="MainMenuScene" type="Node3D" node_paths=PackedStringArray("start_button", "settings_button", "quit_button", "settings_menu")]
script = ExtResource("1_p5i5w")
start_button = NodePath("InWorldNormalMenu/Start")
settings_button = NodePath("InWorldNormalMenu/Settings")
quit_button = NodePath("InWorldNormalMenu/Quit")
settings_menu = NodePath("Camera3D/SettingsHUD")

[node name="3DSetup" type="Node3D" parent="."]

[node name="StaticBody3D" type="StaticBody3D" parent="3DSetup"]

[node name="Flooring" type="CollisionShape3D" parent="3DSetup/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.5, 0.102, 6.5)
shape = SubResource("BoxShape3D_xynrc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="3DSetup/StaticBody3D/Flooring"]
mesh = SubResource("BoxMesh_kj2yp")

[node name="WallRight" type="CollisionShape3D" parent="3DSetup/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 9, -0.5)
shape = SubResource("BoxShape3D_o84a2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="3DSetup/StaticBody3D/WallRight"]
mesh = SubResource("BoxMesh_drpom")

[node name="WallLeft" type="CollisionShape3D" parent="3DSetup/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 9, 7.5)
shape = SubResource("BoxShape3D_s6yrh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="3DSetup/StaticBody3D/WallLeft"]
mesh = SubResource("BoxMesh_4mql8")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.711744, 0, 0.702439, 0, 1, 0, -0.702439, 0, 0.711744, 9.6778, 7.78648, 10.259)

[node name="SettingsHUD" parent="Camera3D" instance=ExtResource("2_n032f")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.874888, -0.370963, 0.311379, 0.349488, 0.928648, 0.124385, -0.335304, 1.99857e-08, 0.94211, 7, 8, 2)
light_color = Color(1, 0.933333, 0.831373, 1)
light_energy = 0.71
sky_mode = 1

[node name="InWorldNormalMenu" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 11, 0.03)

[node name="GameNameTexture" type="Sprite3D" parent="InWorldNormalMenu"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
double_sided = false
texture_filter = 0
texture = ExtResource("6_ao1ut")

[node name="Start" type="StaticBody3D" parent="InWorldNormalMenu"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)
script = ExtResource("7_3y5k0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="InWorldNormalMenu/Start"]
shape = SubResource("BoxShape3D_hy7rq")

[node name="Text" type="MeshInstance3D" parent="InWorldNormalMenu/Start"]
transform = Transform3D(6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0)
mesh = SubResource("TextMesh_io22k")

[node name="Settings" type="StaticBody3D" parent="InWorldNormalMenu"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.6, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="InWorldNormalMenu/Settings"]
shape = SubResource("BoxShape3D_q6dtr")

[node name="Text" type="MeshInstance3D" parent="InWorldNormalMenu/Settings"]
transform = Transform3D(6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0)
mesh = SubResource("TextMesh_v5vv3")

[node name="Quit" type="StaticBody3D" parent="InWorldNormalMenu"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.2, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="InWorldNormalMenu/Quit"]
shape = SubResource("BoxShape3D_xjsee")

[node name="Text" type="MeshInstance3D" parent="InWorldNormalMenu/Quit"]
transform = Transform3D(6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0)
mesh = SubResource("TextMesh_tsd0r")

[connection signal="SettingsToggleOff" from="Camera3D/SettingsHUD" to="." method="deactivate_settings"]
[connection signal="input_event" from="InWorldNormalMenu/Start" to="." method="InteractedStartButton"]
[connection signal="input_event" from="InWorldNormalMenu/Start" to="." method="interacted_start_button"]
[connection signal="input_event" from="InWorldNormalMenu/Settings" to="." method="interacted_settings_button"]
[connection signal="input_event" from="InWorldNormalMenu/Quit" to="." method="interacted_quit_button"]
